--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -36,6 +37,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/philip_parker/Desktop/testng-7.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/philip_parker/Desktop/testng-7.9.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
